fixed the click

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       </aside>
     </nav>
 
-    <main>
+    <main id="container">
       <div class="main_container" role="banner" aria-label="select plan">
         <section class="info_container">
           <p class="info_text">
